[project]
authors = [{ name = "Larry Turner", email = "larry.turner@se.com" }]
classifiers = ["Development Status :: 5 - Production/Stable",
               "Operating System :: OS Independent",
               "Programming Language :: Python :: 3.10",
               "Programming Language :: Python :: 3.11",
               "Programming Language :: Python :: 3.12",
               "Programming Language :: Python :: 3.13"]
dependencies = ["jsonpickle >= 4.0.0, < 5.0.0",
                "loguru >= 0.7.1, < 1.0.0",
                "numpy >= 1.25.0, < 3.0.0",
                "pandas >= 2.1.0, < 3.0.0",
                "requests >= 2.31.0, < 3.0.0",
                "scikit-learn >= 1.3.0, < 2.0.0",
                "scipy >= 1.11.1, < 2.0.0"]
description = "Diamondback DSP"
keywords = ["DSP",
            "FFT",
            "FIR",
            "GMM",
            "JSON",
            "IIR",
            "PSD"]
license = "BSD-3-Clause"
license-files = []
name = "diamondback"
readme = "README.rst"
requires-python = ">= 3.10, < 3.14"
version = "5.1.11"

[project.urls]
homepage = "https://github.com/larryturner/diamondback"

[build-system]
build-backend = "setuptools.build_meta"
requires = ["build >= 1.2.2, < 2.0.0",
            "setuptools >= 80.9.0, < 81.0.0"]

[tool.setuptools.packages.find]
include = ["diamondback*"]

[tool.mypy]
ignore_missing_imports = true

[project.optional-dependencies]
build = ["build >= 1.2.2, < 2.0.0"]
dependencies = ["pydeps >= 3.0.1, < 4.0.0"]
docs = ["sphinx >= 8.2.3, < 9.0.0",
        "sphinx-rtd-theme >= 3.0.2, < 4.0.0"]
format = ["ruff >= 0.11.3, < 1.0.0"]
lint = ["ruff >= 0.11.3, < 1.0.0"]
notebook = ["ipython >= 8.31.0, < 9.0.0",
            "ipywidgets >= 8.1.5, < 9.0.0",
            "jupyter >= 1.1.1, < 2.0.0",
            "matplotlib >= 3.10.1, < 4.0.0",
            "pillow >= 11.1.0, < 12.0.0"]
tests = ["pytest >= 8.3.5, < 9.0.0"]
typing = ["mypy >= 1.15.0, < 2.0.0",
          "types-python-dateutil >= 2.9.0, < 3.0.0",
          "types-requests >= 2.31.0, < 3.0.0"]
